--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Page d'accueil -->
 <div id="accueil" class="page active">
     <div class="hero">
-        <h1>Bienvenue à l'université de Moundou</h1>
+        <h1>Bienvenue CHÉRUBIN à l'université de Moundou</h1>
         <p>Votre avenir commence ici - Excellence académique, Innovation et Réussite</p>
         <a href="#" onclick="showPage('inscription')" class="btn">S'inscrire maintenant</a>
     </div>
