--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             </div>
             <div class="help-item">
                 <h4>💰 Frais d'inscription</h4>
-                <p>À partir de 200€/an selon le programme</p>
+                <p>À partir de 50 000FCFA/an selon le programme</p>
             </div>
             <div class="help-item">
                 <h4>📞 Besoin d'aide ?</h4>
