--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <input type="text" placeholder="Nom">
             </div>
             <div class="input">
-                <input type="mail" placeholder="Email">
+                <input type="mail" placeholder="Email" required>
             </div>
             <div class="input">
                 <textarea placeholder="message"></textarea>
