Update contact section to include a form

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </div>
                 </div>
     </section>
-    <section class="contact" id="contact">
+    <form action="mailto: mokembayeenock@gmail.com" method="post" class="contact" id="contact">
         <div class="titre blanc">
             <h2 class="texte-b"><b><span>C</span>ontact</b></h2>
             <p1><b>formulaire d'inscription pour la réservation de vos Plats</b></p1>
@@ -220,7 +220,7 @@
                 <input type="submit" valeur="envoyer">
             </div>
         </div>
-    </section>
+    </form>
     <div class="copyright">
         <p> copyright <a href="#">chérubin</a> en 2003 pour le meilleur</p>
     </div>
